// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`onPreBootstrap correctly initializes custom options 1`] = `
Object {
  "basePath": "/blog",
  "directories": Object {
    "helpers": "/virtual/project/gatsby/pages",
    "pages": "/virtual/project/content/pages",
    "templates": "/virtual/project/src/templates",
  },
  "engine": Object {
    "bodyFieldName": "html",
    "title": "remark",
    "typeName": "MarkdownRemark",
  },
  "pagination": Object {
    "limit": 10,
    "suffix": "/page/:page",
  },
  "template": null,
  "typeNames": Object {
    "page": "Page",
    "route": "Route",
  },
}
`;

exports[`onPreBootstrap correctly initializes default options 1`] = `
Object {
  "basePath": "/",
  "directories": Object {
    "helpers": "/virtual/project/gatsby/pages",
    "pages": "/virtual/project/content/pages",
    "templates": "/virtual/project/src/templates",
  },
  "engine": Object {
    "bodyFieldName": "html",
    "title": "remark",
    "typeName": "MarkdownRemark",
  },
  "pagination": Object {
    "limit": 10,
    "suffix": "/page/:page",
  },
  "template": null,
  "typeNames": Object {
    "page": "Page",
    "route": "Route",
  },
}
`;

exports[`onPreBootstrap rejects invalid options and throws errors: Invalid Engine 1`] = `"Invalid engine option provided 'whatever' (available engines are 'mdx' or 'remark')"`;
